Labs/Lab-1.3-Php/phpappv1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
spec:
  selector:
    matchLabels:
      name: php-app
  replicas: 1
  template:
    metadata:
      labels:
        name: php-app
    spec:
      serviceAccountName: appd-account
      containers:
        - name: webapp
          image: sashaz/php-web:v1
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-data
            mountPath: /shared
          resources:
            limits:
              cpu: 200m
              memory: 900M
            requests:
              cpu: 100m
              memory: 600M
          ports:
          - containerPort: 9000
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /code/. /shared"]
        - name: nginx
          image: sashaz/nginx-php:v1
          imagePullPolicy: Always
          volumeMounts:
          - name: shared-data
            mountPath: /code
          resources:
            limits:
              cpu: 200m
              memory: 900M
            requests:
              cpu: 100m
              memory: 600M
          ports:
          - containerPort: 8080
      restartPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: php-app
spec:
  selector:
    name: php-app
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
