Labs/Lab-1.3-Php/php-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "php-ingress"
  labels:
    app: php-ingress
spec:
  backend:
    serviceName: "php-app"
    servicePort: 8080
